name:                haskell-scss
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/uebayasi/haskell-scss#readme
license:             BSD3
license-file:        LICENSE
author:              Masao Uebayashi
maintainer:          uebayasi@gmail.com
copyright:           2016 Masao Uebayashi
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Text.SCSS.Parser
  build-depends:       base >= 4.7 && < 5
                     , parsec
  default-language:    Haskell2010

executable haskell-scss-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec
                     , haskell-scss
  default-language:    Haskell2010

test-suite haskell-scss-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , parsec
                     , haskell-scss
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/uebayasi/haskell-scss
